--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -184,7 +184,6 @@ hr {
 }
 
 .main-content {
-  padding: 2rem;
 }
 
 @media (max-width: 855px) {
